# nexus-logix

./: .gitignore  README.md
optimizer/: CMakeLists.txt
optimizer/include/algorithms/graph/: AStarAlgorithm.hpp  DijkstraAlgorithm.hpp
optimizer/include/algorithms/search/: BinarySearchAlgorithm.hpp
optimizer/include/benchmark/: BenchmarkRunner.hpp
optimizer/include/core/: Algorithm.hpp  AlgorithmRegistry.hpp  OptimizationEngine.hpp
optimizer/include/engine/: AStarStrategy.hpp  DijkstraStrategy.hpp  FleetAssignmentEngine.hpp  InventoryAnalyticsEngine.hpp  RouteOptimizationEngine.hpp  RoutingStrategy.hpp
optimizer/include/graph/: GraphNode.hpp  Road.hpp  WarehouseGraph.hpp
optimizer/include/models/: AStarNode.hpp  AlgorithmInput.hpp  AlgorithmMetrics.hpp  AlgorithmResult.hpp  DijkstraState.hpp  RouteResult.hpp
optimizer/include/simulator/: FleetGenerator.hpp  InventoryGenerator.hpp  Order.hpp  OrderGenerator.hpp  Product.hpp  RoadGenerator.hpp  Vehicle.hpp  Warehouse.hpp  WarehouseGenerator.hpp
optimizer/include/testing/: GraphTestBuilder.hpp
optimizer/src/: main.cpp
optimizer/src/benchmark/: BenchmarkRunner.cpp
optimizer/src/core/: AlgorithmRegistry.cpp  OptimizationEngine.cpp
optimizer/src/engine/: AStarStrategy.cpp  DijkstraStrategy.cpp  FleetAssignmentEngine.cpp  InventoryAnalyticsEngine.cpp  RouteOptimizationEngine.cpp
optimizer/src/graph/: WarehouseGraph.cpp
optimizer/src/simulator/: FleetGenerator.cpp  InventoryGenerator.cpp  OrderGenerator.cpp  RoadGenerator.cpp  WarehouseGenerator.cpp
optimizer/src/testing/: GraphTestBuilder.cpp
(+57 files in other folders)
